# bevy_startup_tree

./: .gitignore  Cargo.toml  README.md  bacon.toml  justfile
bevy_startup_tree_macros/: Cargo.toml
bevy_startup_tree_macros/src/: generate_stage_labels.rs  lib.rs  tree.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros_core/: Cargo.toml
crates/macros_core/src/: lib.rs  test_utils.rs
crates/macros_core/src/startup_tree/: node.rs
crates/macros_core/src/system_tree/: mod.rs  node.rs
crates/macros_core/src/tree/: mod.rs
crates/macros_core/tests/: startup_tree.rs  system_tree.rs  tree.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
examples/bevy_ui/: Cargo.toml
examples/bevy_ui/src/: main.rs
examples/bevy_ui_example/: Cargo.toml
examples/bevy_ui_example/src/: main.rs
examples/execution_order/: Cargo.toml
examples/execution_order/src/: main.rs
examples/startup_tree/bevy_ui/: Cargo.toml
examples/startup_tree/bevy_ui/src/: main.rs
examples/startup_tree/execution_order/: Cargo.toml
examples/startup_tree/execution_order/src/: main.rs
examples/system_tree/pipes/: Cargo.toml
examples/system_tree/pipes/src/: main.rs
examples/usage/: Cargo.toml
examples/usage/src/: main.rs
macros/bevy_startup_tree_macros/: Cargo.toml
macros/bevy_startup_tree_macros/src/: lib.rs
macros/bevy_startup_tree_macros_core/: Cargo.toml
macros/bevy_startup_tree_macros_core/src/: branch.rs  lib.rs  node.rs  node_child.rs  test_utils.rs  tree.rs
macros/bevy_startup_tree_macros_core/src/startup_tree/: mod.rs  node.rs
macros/bevy_startup_tree_macros_core/src/system_tree/: mod.rs  node.rs
macros/bevy_startup_tree_macros_core/src/tree/: branch.rs  mod.rs  node.rs
macros/bevy_startup_tree_macros_core/tests/: integration.rs  startup_tree.rs  system_tree.rs
macros/bevy_startup_tree_macros_core/tests/utils/: mod.rs
src/: lib.rs  rng.rs  schedule.rs
