[package]
name = "bevy_startup_tree"
version = "0.8.1"
edition = "2021"
description = "A bevy extension for inserting  startup system dependency graphs into the app"
repository = "https://github.com/nelson137/bevy_startup_tree"
documentation = "https://docs.rs/bevy_startup_tree"
keywords = ["bevy", "game", "gamedev", "tree", "utility"]
license = "MIT OR Apache-2.0"
exclude = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*", "examples/startup_tree/*", "examples/system_tree/*"]

[workspace.dependencies]
rand = "0.9"

[dependencies]
bevy_app = "0.16"
bevy_ecs = "0.16"
bevy_startup_tree_macros = { version = "0.8.1", path = "./crates/macros" }
itertools = "0.14"
rand = { workspace = true }

[dev-dependencies]
bevy = { version = "0.16", default-features = false }
delegate = "0.13"
