[package]
name = "bevy_startup_tree_macros"
version = "0.6.1"
edition = "2021"
description = "procedural macros for bevy_startup_tree"
documentation = "https://docs.rs/bevy_startup_tree_macros"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bevy_startup_tree_macros_core = { version = "0.6.1", path = "../macros_core" }
quote = "1.0"
syn = "2.0"
