[package]
name = "bevy_startup_tree_macros_core"
version = "0.5.0"
edition = "2021"
description = "core of bevy_startup_tree_macros"
documentation = "https://docs.rs/bevy_startup_tree_macros_core"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }

[dev-dependencies]
rand = "0.8"
