[package]
name = "execution_order_example"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15", default-features = false }
bevy_startup_tree = { path = "../../.." }
rand = { version = "0.8.5", features = ["small_rng"] }
