[package]
name = "system_tree_pipes_example"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_log"] }
bevy_startup_tree = { path = "../../.." }
rand = { version = "0.8.5", features = ["small_rng"] }
